--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,7 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    return list(travel_destinations(+1))"
+    "    return list(travel_destinations(0))"
    ]
   },
   {
